# TRADEMASTER

./: .env.example  .gitignore  Makefile  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_timescaledb_hypertables.py  003_add_model_and_backtest_fields.py  004_materialized_views.py  005_add_fk_and_check_constraints.py  006_add_alerts_and_journal.py  007_add_stored_events_and_totp.py  008_add_lineage_and_schemas.py  009_add_ml_tracking.py
backend/app/: config.py  dependencies.py  main.py
backend/app/commands/: __init__.py  execute_trade.py  run_backtest.py  update_settings.py
backend/app/core/: actor.py  api_gateway.py  audit.py  brute_force.py  cqrs_projector.py  encryption.py  event_sourcing.py  event_store.py  events.py  exceptions.py  feature_flags.py  grpc_service.py  honeypot.py  idempotency.py  logging.py  metrics.py  multi_region.py  pentest.py  plugin_system.py  rasp.py  rate_limiter.py  resilience.py  saga_orchestrator.py  schema_registry.py  secret_rotation.py  security.py  soc2.py  totp.py  tracing.py
backend/app/models/: alert.py  api_key.py  audit.py  backtest.py  base.py  event.py  journal.py  lineage.py  market.py  ml_tracking.py  notification.py  portfolio.py  signal.py  trade.py  user.py
backend/app/queries/: __init__.py  get_portfolio.py  get_risk_metrics.py  get_trade_history.py
backend/app/repositories/: __init__.py  base.py  market_repo.py  order_repo.py  position_repo.py
backend/app/schemas/: market.py  trading.py
backend/app/services/: interfaces.py  scheduler.py  trading_engine.py  ws_broadcaster.py
backend/scripts/: backup_db.py  generate_catalog.py  run_trading.py  seed_historical.py  train_models.py
backend/tests/: conftest.py
(+406 files in other folders)
