[project]
name = "trademaster"
version = "0.1.0"
description = "AI-powered cryptocurrency trading platform for Bitcoin & Ethereum via Binance"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Redis
    "redis[hiredis]>=5.2.0",
    # Exchange
    "python-binance>=1.0.19",
    "ccxt>=4.4.0",
    # Data & ML
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "pandas-ta>=0.3.14b1",
    "scikit-learn>=1.6.0",
    "torch>=2.5.0",
    "xgboost>=2.1.0",
    # Task queue
    "celery[redis]>=5.4.0",
    # Utilities
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
    "cryptography>=44.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
ml = [
    "stable-baselines3>=2.4.0",
    "gymnasium>=1.0.0",
    "transformers>=4.46.0",
    "mlflow>=2.18.0",
    "optuna>=4.1.0",
    "vectorbt>=0.26.2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN"]
ignore = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
